# Jakub-Jancik

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.caddy.yml  docker-compose.monitoring.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
data/processed/: feature_scores_mutual_info.csv  metadata.json  test.csv
infra/ansible/: deploy.yml  inventory.ini.example
infra/ansible/files/monitoring/grafana/dashboards/: telco-api-dashboard.json  telco-vm-dashboard.json
infra/ansible/files/monitoring/grafana/provisioning/dashboards/: dashboards.yml
infra/ansible/files/monitoring/grafana/provisioning/datasources/: datasource.yml
infra/ansible/files/monitoring/loki/: loki-config.yml
infra/ansible/files/monitoring/promtail/: promtail-config.yml
infra/ansible/group_vars/: all.yml
infra/terraform/: main.tf  outputs.tf  variables.tf
models/: best_model.joblib  churn_pipeline.joblib
notebooks/: 01_preprocessing_and_feature_selection.ipynb  02_modeling_and_evaluation.ipynb
ops/caddy/: Caddyfile
ops/loki/: loki-config.yml
ops/prometheus/: prometheus.yml
ops/promtail/: promtail-config.yml
reports/: cv_metrics.csv  test_metrics.csv  tuning_summary.csv
scripts/: test_client.py
src/telco_churn/: __init__.py  api.py  config.py  pipeline.py  prediction_ui.py  preprocessing.py  schemas.py  train.py
tests/: conftest.py  test_api.py  test_pipeline.py  test_processors.py
