[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-churn"
version = "0.1.0"
description = "Telco Customer Churn — pipeline, training CLI, FastAPI service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.26",
    "requests>=2.31",
]

[project.scripts]
telco-train = "telco_churn.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
